# mtasa-module-starterkit

./: .gitignore  CMakeLists.txt  README.md
lua/: CMakeLists.txt
module/: CMakeLists.txt  main.cpp  ml_base.cpp  ml_base.h
module/src/: MTAModule.cpp  MTAModule.h  MTAModuleContext.h  init.cpp  init.h  ml_base.cpp
mta/: CMakeLists.txt
mta/include/: ILuaModuleManager.h
sdk/: CMakeLists.txt
sdk/include/mta/: Common.h  ILuaModuleManager.h
